syntax = "proto3";

package types;
option go_package = "github.com/lyfeyvutha/grpcATCbank/gen/common";

/* TODO:
  This file doesnâ€™t have any service definitions, only three types:
    User - message with a single field string id
    Payment - message with fields User user and int32 amount
    PaymentStatement - message with a single field string data
*/
message User {
  string id = 1;
}

message Transfer {
  User user = 1;
  int32 amount = 2;
}

message TransferStatement {
  string data = 1;
}